# ecommerce-agent

./: .env.example  Makefile  README.md  UPDATE.md  pyproject.toml
assets/: debug.md  demo.md  issue.md
client/: README.md  app.py  test.py
client/.streamlit/: config.toml  pages.toml
client/assets/docs/: about.md
client/pages/: about.py  agent.py  guide.py
client/services/: chat_service.py
client/utils/: apis.py  constants.py  utils.py
server/: README.md  langgraph.json  main.py  requirements.txt
server/agent/: graph.py  graph2.py  llms.py
server/agent/prompts/: agent_prompt_v1.md  agent_prompt_v2.md  agent_prompt_v3.md  agent_prompt_with_fine_tuning_model.md  agent_prompt_with_fine_tuning_model_v2.md  prompt.py
server/agent/rag/: ingest.py  loader.py  retriever.py
server/agent/tools/: __init__.py  create_support_ticket.py  lookup_documents.py  save_memory.py  search_google_shopping.py  sql_tools.py
server/data/: ecommerce_agent_fine_tuning.jsonl  products.json  products_v2.json
server/data/documents/: faqs.txt  policies.yaml
server/data/v2/: man_pants.json  man_shirt.json  products_v2.json  woman_dress.json  woman_pants.json  woman_shirt.json  woman_skirt.json
server/evals/langsmith/: README.md  experiment.py
server/evals/promptfoo/: README.md  context.py
server/routers/: chat.py  health.py  history.py
server/schema/: schema.py
server/scripts/: create_database.py  draw_graph.py  graph_local.py  load_env.py  memory.py
server/utils/: constants.py  utils.py
server/web-crawler/: README.MD  config.py  main.py  pyproject.toml
(+23 files in other folders)
